--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
     "@material-ui/icons": "^4.4.1",
     "@material-ui/system": "^4.3.3",
     "@material/top-app-bar": "^3.1.0",
+    "axios": "^0.19.0",
     "material-ui": "^0.20.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1",
-    "semantic-ui": "^2.4.2",
-    "semantic-ui-react": "^0.88.0"
+    "react-scripts": "3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
