--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "@material/top-app-bar": "^3.1.0",
     "axios": "^0.19.0",
     "material-ui": "^0.20.2",
-    "react": "^16.9.0",
+    "react": "^16.12.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-scripts": "^3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
